--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -4,9 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <link rel="javascript" href="rockPaperScissors.js">
+    <script src="rockPaperScissors.js"></script> 
 </head>
 <body>
+<h1>Toad, Insect, Snake</h1>
+<p>Snake kills Toad, Toad kills insect and Insect kills Snake</p>
     
 </body>
 </html>
