Need to figure out how to use error handling in playerPlay() and then all functions nedded to play a round of Insect, Toad or SNake are complete.

--- a/rockPaperScissors.html
+++ b/rockPaperScissors.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Toad, Insect, Snake</h1>
 <p>Snake kills Toad, Toad kills insect and Insect kills Snake</p>
+<p>When the prompt appears enter your answer. Every round you win gets you a point, First to 5 wins!</p>
     
 </body>
 </html>
