html and most of js and css complete. Need to add dynamic styling, chnage playerPLay() to store id of clicked image as var value and refactor playAgain()

--- a/finalRPS.html
+++ b/finalRPS.html
@@ -4,8 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insect Toad Snake</title>
-    <link rel="stylesheet" href="finalRPS.css">
-    <script src="finalRPS.js"></script> 
+    <link rel="stylesheet" href="finalRPS.css"> 
 </head>
     <body>
         <div class = "game-container">
@@ -15,14 +14,14 @@
                 <p>Win the round to gain a point. First to 5 wins!</p>
             </header>
             <div class ="img-options-container">
-                <div class = "img-options" id = "insect-container">
-                     <img id = "insect" src="Images/insect.jpg" alt="An image of an insect">
+                <div class = "img-options" id = "insect">
+                     <img id = "Insect-img" src="Images/insect.jpg" alt="An image of an insect">
                 </div>
-                <div class = "img-options" id = "toad-container">
-                    <img id = "toad" src="Images/toad.jpg" alt="An image of a toad">
+                <div class = "img-options" id = "toad">
+                    <img id = "Toad-img" src="Images/toad.jpg" alt="An image of a toad">
                 </div>
-                <div class = "img-options" id = "snake-container">
-                    <img id = "snake" src="Images/snake.jpg" alt="An image of a snake">
+                <div class = "img-options" id = "snake">
+                    <img id = "Snake-img" src="Images/snake.jpg" alt="An image of a snake">
                 </div>
             </div>
             <div class = "score-container">
@@ -35,7 +34,9 @@
             </div>
             
             <span id = "announcement">FILLERFILLERFILLER</span>
+            <span id = "play-again">PLAYAGAINPLAYAGAIN</span>
            
         </div>  
+        <script src="finalRPS.js"></script>
     </body>
 </html>
