--- a/finalRPS.html
+++ b/finalRPS.html
@@ -13,16 +13,11 @@
                 <p>Snake kills Toad. Toad kills insect. Insect kills Snake</p>
                 <p>Win the round to gain a point. First to 5 wins!</p>
             </header>
-            <div class ="img-options-container">
-                <div class = "img-options img-opts" id = "insect">
-                     <img id = "Insect-img" src="Images/insect.jpg" alt="An image of an insect">
-                </div>
-                <div class = "img-options img-opts" id = "toad">
-                    <img id = "Toad-img" src="Images/toad.jpg" alt="An image of a toad">
-                </div>
-                <div class = "img-options img-opts" id = "snake">
-                    <img id = "Snake-img" src="Images/snake.jpg" alt="An image of a snake">
-                </div>
+            <div class ="options-container">
+                <button class = "option-btn" id = "Insect"></button>
+                <button class = "option-btn" id = "Toad"></button>
+                <button class = "option-btn" id = "Snake"></button>
+                
             </div>
             <div class = "score-container">
                 <div class= "scores" id = "player">
