file names changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insect Toad Snake</title>
-    <link rel="stylesheet" href="finalRPS.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
     <body>
         <div class = "game-container" id ="gamecontainer">
@@ -29,6 +29,6 @@
             </div>
             <span id = "announcement"></span>
         </div>  
-        <script src="finalRPS.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
